fix text align issue

--- a/components/tape.module.css
+++ b/components/tape.module.css
@@ -12,9 +12,11 @@
   width: 50px;
   height: 50px;
   border: 1px black solid;
-  text-align: center;
   justify-content: center;
+  align-items: center;
   display: flex;
+}
+.cell b {
   font-size: 30px;
 }
 
